--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,4 @@
 all:
-  vars:
-    ansible_ssh_private_key_file: /home/ubuntu/frazer-kp-ajc1.pem
   children:
     ansible:
       hosts:
@@ -10,13 +8,16 @@ all:
     prod:
       vars:
         env: production
-        ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
       hosts:
         worker01:
-          ansible_host: 172.31.89.126
-          hostname: AnsibleWorker01
-  
+          ansible_host: 172.31.1.233
+          ansible_user: ubuntu
+          ansible_password: ubuntu
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+
         worker02:
-          ansible_host: 172.31.95.0
-          hostname: AnsibleWorker02
+          ansible_host: 172.31.3.102
+          ansible_user: ubuntu
+          ansible_password: ubuntu
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
